# open-dstore

./: .gitignore  AGENTS.md  Dockerfile  README.md  README_CN.md  build.sh  buildenv  docker_deploy.sh
.claude/: CLAUDE.md
.claude/docs/: build-reference.md  coding-style.md  module-mapping.md
.claude/skills/: perf-flamegraph.md
.githooks/: commit-msg
.github/workflows/: ci.yml  docker-image.yml  ut.yml
build_script/: dstore_conf.json  dynamic_vfs.conf.init  guc.json
cmake/: set_lib_path.cmake
include/buffer/: dstore_bg_page_writer_mgr.h
include/common/fault_injection/: dstore_buf_fault_injection.h
include/framework/: dstore_thread.h
include/wal/: dstore_wal_recovery.h
scripts/: compile.sh
src/buffer/: dstore_bg_disk_page_writer.cpp  dstore_bg_page_writer_mgr.cpp  dstore_buf_desc.cpp  dstore_buf_mgr.cpp  dstore_buf_table.cpp
src/common/algorithm/: dstore_dynahash.cpp
src/framework/: dstore_instance.cpp  dstore_pdb.cpp
src/wal/: dstore_wal_recovery.cpp
tests/: CMakeLists.txt  build_and_run_sysbenchtest.sh
tests/sysbenchtest/: CMakeLists.txt  README.md  config.json  config_read_only.json  config_read_write.json  config_write_only.json  run_scenarios.sh
tests/sysbenchtest/include/: sysbench_client.h  sysbench_common.h  sysbench_server.h  sysbench_stats.h
tests/sysbenchtest/src/: main.cpp  sysbench_client.cpp  sysbench_server.cpp  sysbench_stats.cpp
tests/unittest/include/ut_buffer/: ut_buffer_fake_instance.h
tests/unittest/include/ut_mock/: ut_wal_stream_mock.h
tests/unittest/src/ut_buffer/: ut_buffer_ring.cpp
tests/unittest/src/ut_transaction/: ut_transaction.cpp
tests/unittest/ut_config/: ut_isoland_start.json
